packages/svelte/tests/validator/samples/rune-invalid-options/input.svelte
<script>
	let options = {};
	let test = $state(0, options);
</script>