packages/svelte/tests/compiler-errors/samples/runes-no-rune-each/main.svelte
<script>
	let todos = $state([]);
</script>


{#each todos as $state(todo)}
  {todo}
{/each}